# siemensbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  alerts.py  main.py  monitoring.py  repositories.py
app/ai/: openrouter.py
app/bots/: __init__.py  admin_bot.py  user_bot.py
app/core/: config.py  db.py  (+1 more)
evals/: CODEX_PROMPT.md  README.md  __init__.py  deepeval_adapter.py  reporting.py  run_sales_eval.py
ops/: MONITORING.md  __init__.py  host_monitor.py  siemensbot-monitor.service  supabase_watchdog_setup.sql.example
prompts/: active.json  dialog_analysis.schema.json  dialog_analysis.system.md  ping.system.md  user_chat.system.md
scripts/: apply_migrations.sh
siemensbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_admin_leads.py  test_admin_report.py  test_admin_status.py  test_admin_users.py  test_admin_views.py  test_blocked_funnel_stage_migration.py  test_campaigns.py  test_config.py  test_dialogue_report.py  test_eval_reporting.py  test_eval_runner.py  test_google_sheet_sync_migration.py  test_google_sheets.py  test_google_sheets_worker.py  test_growth_alert_admin.py  test_growth_alert_migration.py  test_health.py  test_host_monitor.py  test_importer.py  test_leads.py  test_monitoring.py  test_monitoring_migration.py  test_openrouter.py  test_ping_migration.py  test_ping_worker.py  test_redirect.py  test_referral_sources_migration.py  test_repositories.py  test_telegram_errors.py  test_tokens_stats.py  test_transcript.py  test_user_bot.py
(+113 files in other folders)
