[project]
name = "siemensbot"
version = "0.1.0"
description = "Inbound Telegram funnel with admin/user bots and Supabase Postgres."
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.29,<4.0",
  "asyncpg>=0.29,<1.0",
  "fastapi>=0.111,<1.0",
  "httpx>=0.27,<1.0",
  "openpyxl>=3.1,<4.0",
  "pydantic-settings>=2.3,<3.0",
  "python-dotenv>=1.0,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
]
eval = [
  "deepeval==4.0.8",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "evals*", "ops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]
